tests/lean/noTabs.lean.expected.out
noTabs.lean:3:0: error: tabs are not allowed; please configure your editor to expand them
let a := 1;
sorry : ?m
